# lance

./: .bumpversion.toml  404.html  Cargo.toml  README.md  deny.toml  index.html  rest.yaml  sitemap.xml
assets/javascripts/: nav-expand.js
assets/stylesheets/: home.css
community/: index.html
community/communication/: index.html
community/contributing/: index.html
community/maintainers/: index.html
community/pmc/: index.html
community/project-specific/: index.html
community/project-specific/namespace/: index.html
community/project-specific/namespace-impls/: index.html
community/project-specific/ray/: index.html
community/project-specific/spark/: index.html
community/project-specific/trino/: index.html
community/release/: index.html
community/voting/: index.html
docs/src/quickstart/: index.md
examples/python/artifact_management/: index.html
examples/python/clip_training/: index.html
examples/python/flickr8k_dataset_creation/: index.html
examples/python/llm_dataset_creation/: index.html
examples/python/llm_training/: index.html
examples/rust/hnsw/: index.html
examples/rust/llm_dataset_creation/: index.html
examples/rust/write_read_dataset/: index.html
format/: index.html
format/AGENTS/: index.html
format/catalog/: index.html
format/catalog/dir/: index.html
format/catalog/rest/: index.html
format/file/: index.html
format/file/encoding/: index.html
format/file/versioning/: index.html
format/index/: index.html
format/index/vector/: index.html
format/namespace/: index.html  rest.yaml
format/namespace/client/: index.html
format/namespace/integrations/: index.html
format/namespace/object-relationship/: index.html
format/namespace/operations/: index.html
format/namespace/partitioning-spec/: index.html
format/namespace/supported-catalogs/: index.html
format/table/: index.html
format/table/branch_tag/: index.html
format/table/index/: index.html
format/table/layout/: index.html
format/table/mem_wal/: index.html
format/table/row_id_lineage/: index.html
format/table/schema/: index.html
format/table/transaction/: index.html
format/table/versioning/: index.html
guide/arrays/: index.html
guide/blob/: index.html
guide/data_evolution/: index.html
guide/data_types/: index.html
guide/distributed_indexing/: index.html
guide/distributed_write/: index.html
guide/json/: index.html
guide/migration/: index.html
guide/object_store/: index.html
guide/performance/: index.html
guide/read_and_write/: index.html
guide/tags/: index.html
guide/tags_and_branches/: index.html
guide/tokenizer/: index.html
integrations/: index.html
integrations/datafusion/: index.html
integrations/duckdb/: index.html
integrations/duckdb/cloud/: index.html
integrations/duckdb/rest/: index.html
integrations/duckdb/sql/: index.html
integrations/huggingface/: index.html
integrations/huggingface/examples/: index.html
integrations/pytorch/: index.html
integrations/ray/: index.html
integrations/ray/compaction/: index.html
integrations/ray/data-evolution/: index.html
integrations/ray/distributed-indexing/: index.html
integrations/ray/examples/: index.html
integrations/ray/read/: index.html
integrations/ray/write/: index.html
integrations/spark/: index.html
integrations/tensorflow/: index.html
integrations/trino/: index.html
java/: pom.xml
java/lance-jni/: Cargo.toml
java/lance-jni/src/: fragment.rs
python/: Cargo.toml
python/python/ci_benchmarks/benchmarks/: test_count_rows.py
python/python/ci_benchmarks/datagen/: count_rows.py  gen_all.py
python/python/lance/: dataset.py
python/python/lance/indices/: __init__.py
python/python/lance/lance/: __init__.pyi
python/python/tests/: test_count_pushdown.py  test_scalar_index.py
python/src/: scanner.rs
quickstart/: index.html
quickstart/full-text-search/: index.html
quickstart/vector-search/: index.html
quickstart/versioning/: index.html
rust/examples/: Cargo.toml
rust/lance/: Cargo.toml
rust/lance-datagen/: Cargo.toml
rust/lance-encoding/: Cargo.toml
rust/lance-file/: Cargo.toml
rust/lance-index/: Cargo.toml
rust/lance-index/benches/: 4bitpq_dist_table.rs  bitmap.rs  btree.rs  compute_partition.rs  find_partitions.rs  geo.rs  hnsw.rs  inverted.rs  kmeans.rs  ngram.rs  pq_dist_table.rs  residual_transform.rs  rq.rs  sq.rs  zonemap.rs
rust/lance-index/src/scalar/: bitmap.rs  btree.rs  expression.rs  json.rs  label_list.rs
rust/lance-index/src/scalar/inverted/: index.rs  wand.rs
rust/lance-index/src/vector/hnsw/: builder.rs
rust/lance-io/: Cargo.toml
rust/lance-linalg/: Cargo.toml
rust/lance-linalg/benches/: argmin.rs  cosine.rs  dist_table.rs  dot.rs  hamming.rs  l2.rs  norm_l2.rs
rust/lance-table/: Cargo.toml
rust/lance-testing/: Cargo.toml
rust/lance-testing/src/: lib.rs  (+1 more)
rust/lance/benches/: distributed_vector_build.rs  fts_search.rs  ivf_pq.rs  merge_insert.rs  scalar_index.rs  scan.rs  streaming_ivf_training.rs  take.rs  take_blob.rs  vector_index.rs  vector_throughput.rs
rust/lance/benches/mem_wal/read/: memtable_read.rs
rust/lance/benches/mem_wal/write/: mem_wal_write.rs
rust/lance/src/: dataset.rs  index.rs
rust/lance/src/dataset/: scanner.rs  transaction.rs  write.rs
rust/lance/src/dataset/mem_wal/scanner/: fts_search.rs
rust/lance/src/dataset/optimize/: binary_copy.rs
rust/lance/src/dataset/optimize/tests/: binary_copy.rs
rust/lance/src/dataset/tests/: dataset_aggregate.rs
rust/lance/src/dataset/write/: delete.rs  key_existence_filter.rs  merge_insert.rs  update.rs
rust/lance/src/dataset/write/merge_insert/: exec.rs
rust/lance/src/dataset/write/merge_insert/exec/: write.rs
rust/lance/src/index/: create.rs  scalar.rs  scalar_logical.rs
rust/lance/src/index/scalar/: bitmap.rs
rust/lance/src/io/: exec.rs
rust/lance/src/io/exec/: count_from_mask.rs  count_pushdown.rs  filtered_read.rs  optimizer.rs  scalar_index.rs
rust/lance/tests/: integration_tests.rs
rust/lance/tests/count_pushdown/: mod.rs
sdk_docs/: index.html
search/: search_index.json
(+373 files in other folders)
