[package]
name = "pylance"
version = "8.0.0-beta.2"
edition = "2024"
authors = ["Lance Devs <dev@lance.org>"]
license = "Apache-2.0"
rust-version = "1.91"
exclude = ["python/lance/conftest.py"]
publish = false

[lib]
name = "lance"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58.0.0", features = ["pyarrow"] }
arrow-array = "58.0.0"
arrow-cast = "58.0.0"
arrow-data = "58.0.0"
arrow-schema = "58.0.0"
object_store = "0.13.2"
datafusion = "53.0.0"
datafusion-ffi = "53.0.0"
datafusion-common = "53.0.0"
async-trait = "0.1"
chrono = "0.4.42"
env_logger = "0.11.7"
futures = "0.3"
half = { version = "2.5", default-features = false, features = [
    "num-traits",
    "std",
] }
lance = { path = "../rust/lance", features = [
    "dynamodb",
    "substrait",
] }
lance-arrow = { path = "../rust/lance-arrow" }
lance-core = { path = "../rust/lance-core" }
lance-datagen = { path = "../rust/lance-datagen", optional = true }
lance-encoding = { path = "../rust/lance-encoding" }
lance-file = { path = "../rust/lance-file" }
lance-index = { path = "../rust/lance-index", features = [
    "tokenizer-lindera",
    "tokenizer-jieba",
] }
lance-io = { path = "../rust/lance-io" }
lance-linalg = { path = "../rust/lance-linalg" }
lance-namespace = { path = "../rust/lance-namespace" }
lance-namespace-impls = { path = "../rust/lance-namespace-impls", features = ["rest", "rest-adapter"] }
lance-table = { path = "../rust/lance-table" }
lance-datafusion = { path = "../rust/lance-datafusion" }
libc = "0.2.176"
log = "0.4"
prost = "0.14.1"
prost-types = "0.14.1"
pyo3 = { version = "0.28", features = [
    "extension-module",
    "abi3-py39",
    "py-clone",
    "chrono",
] }
pythonize = "0.28"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
uuid = "1.3.0"
roaring = "0.11.4"
serde_json = "1"
serde = "1.0.197"
serde_yaml = "0.9.34"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
tracing = { version = "0.1" }
bytes = "1.4"

[features]
default = []
datagen = ["lance-datagen"]
fp16kernels = ["lance/fp16kernels"]

[profile.ci]
debug = "line-tables-only"
inherits = "dev"
incremental = false

# This rule applies to every package except workspace members (dependencies
# such as `arrow` and `tokio`). It disables debug info and related features on
# dependencies so their binaries stay smaller, improving cache reuse.
[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false

[lints.clippy]
disallowed_macros = "deny"
