[package]
name = "lance-jni"
version = "8.0.0-beta.2"
edition = "2024"
authors = ["Lance Devs <dev@lance.org>"]
rust-version = "1.91"
license = "Apache-2.0"
repository = "https://github.com/lance-format/lance"
readme = "../../README.md"
description = "JNI bindings for Lance Columnar format"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
lance = { path = "../../rust/lance", features = ["substrait"] }
lance-datafusion = { path = "../../rust/lance-datafusion" }
lance-encoding = { path = "../../rust/lance-encoding" }
lance-linalg = { path = "../../rust/lance-linalg" }
lance-index = { path = "../../rust/lance-index" }
lance-io = { path = "../../rust/lance-io" }
lance-namespace = { path = "../../rust/lance-namespace" }
lance-namespace-impls = { path = "../../rust/lance-namespace-impls", features = ["rest", "rest-adapter"] }
lance-core = { path = "../../rust/lance-core" }
lance-file = { path = "../../rust/lance-file" }
lance-table = { path = "../../rust/lance-table" }
arrow = { version = "58.0.0", features = ["ffi"] }
arrow-array = "58.0.0"
arrow-schema = "58.0.0"
datafusion = { version = "53.0.0", default-features = false }
datafusion-common = "53.0.0"
object_store = { version = "0.13.2" }
tokio = { version = "1.23", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
] }
async-trait = "0.1"
jni = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
bytes = "1.11"
log = "0.4"
env_logger = "0.11.7"
uuid = { version = "1.17.0", features = ["v4"] }
prost = "0.14.1"
roaring = "0.11.4"
prost-types = "0.14.1"
chrono = "0.4.41"

[profile.dev]
debug = "line-tables-only"
incremental = false

# This rule applies to every package except workspace members (dependencies
# such as `arrow` and `tokio`). It disables debug info and related features on
# dependencies so their binaries stay smaller, improving cache reuse.
[profile.dev.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false

[lints.clippy]
disallowed_macros = "deny"
